# JobScanner

./: .env.example  .gitignore  .python-version  Dockerfile  README.md  docker-compose.yaml  main.py  prompt.txt  pyproject.toml  stagehand_debug.py
cover_letter_templates/: cover_letter_template.tex
cv/: cv.tex
cv_templates/: orange_template.tex
scripts/: main.py
